add my code for part 1

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,43 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Description here" />
-	<title></title>
+	<title>Best Ever Vegan Brownies Recipe</title>
 </head>
 <body>
+	<h1>Best Ever Vegan Brownies Recipe</h1>
+	<img src= "images/Brownies-1.png" alt="An image of slided brownies." />
+	<p>This really is the Best Ever Vegan Brownies Recipe! Fudgy, gooey, perfect squares of chocolate that cut easily and are easy to make. You'll never buy a boxed brownie mix again!</p>
+	<h2>Ingredients</h2>
+	<ul>
+		<li>4 tablespoons ground flax</li>
+		<li>1/2 cup water</li>
+		<li>1/2 cup vegan butter (earth balance brand), melted *see instructions</li>
+		<li>1 cup granulated sugar</li>
+		<li>1 cup brown sugar, lightly packed</li>
+		<li>1 tablespoon pure vanilla extract</li>
+		<li>1 cup all purpose flour</li>
+		<li>1 cup unsweetened cocoa powder</li>
+		<li>1/2 teaspoon salt</li>
+		<li>1 teaspoon baking powder</li>
+		<li>1 cup non-dairy chocolate chips OR roughly chopped chocolate pieces</li>
+	</ul>
+	<h2>Instructions</h2>
+	<ol>
+		<li>Make the flax eggs by stirring the ground flax and water in a small bowl. Set aside to thicken. Preheat the oven to 350 degrees F and line a 7 × 11 pan with parchment paper.</li>
+		<li>Melt the vegan butter (earth balance brand preferred), and measure 1/2 cup. I do this by microwaving the vegan butter in a glass measuring cup, in 30 second intervals, until melted.</li>
+		<li>In a large bowl, whisk the melted vegan butter and sugars together. Add the flax eggs and vanilla, whisk until evenly combined.</li>
+		<li>Over the same large bowl, sift in the flour and cocoa powder. Add the salt and baking powder and stir with a large wooden spoon until just combined, do not over mix.</li>
+		<li>Fold in half of the chocolate chips. Pour the batter into the prepared pan and smooth out the top with a spoon or your hands. Sprinkle the rest of the chocolate chips on top of the batter.</li>
+		<li>Bake for 35-40 minutes. The brownies may still be bubbling and not look done, but they will firm up a lot as they cool.</li>
+		<li>Remove from the oven, allow to cool in the pan for 15 minutes, then pull the brownies out, using the parchment paper and let cool for another 15-30 minutes before slicing and serving.</li>
+	</ol>
+	<h3>Notes</h3>
+	<ol>
+		<li>To sift, either use a sifter or a fine mesh strainer also works.</li>
+		<li>Coconut oil does not work very well in place of the vegan butter; it makes them very oily so I don’t recommend it. You could sub applesauce for the vegan butter if you are oil free.</li>
+		<li>If you don’t want the brownies as sweet, it is perfectly okay to reduce the sugar, even to 1 cup. They will still turn out well, just not as sweet.</li>
+		<li>When you initially take the brownies out of the oven, they will appear underdone and soft, but give them time to cool. They are even better the next day; fudgy and rich. These are NOT cake-like brownies.</li>
+		<li>You may also use dutch processed cocoa powder for slightly different results. They will be a little less fudgy, and darker in color.</li>
+	</ol>
 </body>
 </html>
