Add my code for part 1

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 	<h1>Best Ever Vegan Brownies Recipe</h1>
 	<img src= "images/Brownies-1.png" alt="An image of slided brownies." />
 	<p>This really is the Best Ever Vegan Brownies Recipe! Fudgy, gooey, perfect squares of chocolate that cut easily and are easy to make. You'll never buy a boxed brownie mix again!</p>
+	<img src="images/Brownies-2.png" alt="An image of browines with chocolate chips." />
 	<h2>Ingredients</h2>
 	<ul>
 		<li>4 tablespoons ground flax</li>
