--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,16 @@
 	<meta name="description" content="Description here" />
 	<title>Best Ever Vegan Brownies Recipe</title>
 </head>
+
 <body>
 	<h1>Best Ever Vegan Brownies Recipe</h1>
-	<img src= "images/Brownies-1.png" alt="An image of slided brownies." />
-	<p>This really is the Best Ever Vegan Brownies Recipe! Fudgy, gooey, perfect squares of chocolate that cut easily and are easy to make. You'll never buy a boxed brownie mix again!</p>
-	<img src="images/Brownies-2.png" alt="An image of browines with chocolate chips." />
+
+	<img src="images/Nora.png" alt= "An image of Nora." />
+
+	<h3>Hello, I am Nora!</h3>
+
+	<p> I create vegan recipes that are easy to cook, made with simple ingredients and most importantly – taste incredible! Everyone is welcome.</p>
+
 	<h2>Ingredients</h2>
 	<ul>
 		<li>4 tablespoons ground flax</li>
@@ -26,6 +31,7 @@
 		<li>1 teaspoon baking powder</li>
 		<li>1 cup non-dairy chocolate chips OR roughly chopped chocolate pieces</li>
 	</ul>
+
 	<h2>Instructions</h2>
 	<ol>
 		<li>Make the flax eggs by stirring the ground flax and water in a small bowl. Set aside to thicken. Preheat the oven to 350 degrees F and line a 7 × 11 pan with parchment paper.</li>
@@ -36,7 +42,45 @@
 		<li>Bake for 35-40 minutes. The brownies may still be bubbling and not look done, but they will firm up a lot as they cool.</li>
 		<li>Remove from the oven, allow to cool in the pan for 15 minutes, then pull the brownies out, using the parchment paper and let cool for another 15-30 minutes before slicing and serving.</li>
 	</ol>
-	<h3>Notes</h3>
+
+	<p>This really is the Best Ever Vegan Brownies Recipe! Fudgy, gooey, perfect squares of chocolate that cut easily and are easy to make. You'll never buy a boxed brownie mix again!</p>
+
+	<img src= "images/Brownies-1.png" alt="An image of slided brownies." />
+
+	<p>In the last two days, I’ve made three batches of vegan brownies. That’s right, three. A few weeks ago, I tried some other recipes I was playing around with. All in an attempt to create the most perfect vegan brownies recipe in the world. It has been such a struggle you guys! (And yes I have a freezer FULL of brownies)</p>
+
+	<p>All of the recipes were edible (I mean, come on, it’s chocolate people!), but NOT the brownie perfection I was looking for. Either they were too fudgy, or too cake-like (my biggest peeve). Or one batch that cooked fine on the outside but wouldn’t fully cook near the middle.</p>
+
+	<img src="images/Brownies-2.png" alt="An image of browines with chocolate chips." />
+
+	<p>I had to do some serious brownie research, read about ingredients, what makes a brownie cake-like, what makes them more fudgy, how to create the right balance for what I was looking for, and then think about the best vegan swaps for the result I wanted to achieve.</p>
+
+	<p>Finally, just a few days ago, I made one more batch of vegan brownies, after carefully creating the recipe on paper. I was SO excited as the batter tasted incredible, and after baking they looked good in the pan. Still having doubts, I let them cool a bit and then removed them from the pan and sliced them slowly.</p>
+
+	<p>When I looked inside and took the first bite, I knew, I had finally created the PERFECT Vegan Brownies Recipe! They are thick and hold together when you slice them. Fudgy, but not overly so, chewy, rich, ooey-gooey and full of chocolatey goodness. No one would guess they’re vegan!</p>
+
+	<img src="images/Brownies-3.png" alt="An image of browines in a bowl." />
+
+	<h2>What kind of chocolate chips should I use for vegan brownies recipe?</h2>
+
+	<p>I used Trader Joe’s semi-sweet chocolate chips because they happen to be vegan and are quite inexpensive. It can be difficult to find chocolate chips that don’t contain dairy, so just check the ingredients list. Enjoy Life is a good brand and you can order them on Amazon. You can also use your favorite chocolate bar and chop it into pieces.</p>
+
+	<h2>What kind of cocoa powder should I use? </h2>
+
+	<p>I used Trader Joe’s unsweetened cocoa powder in this recipe, Hershey’s unsweetened is also a good option. I would not recommend you use a dutch cocoa powder, as you will get different results.</p>
+
+	<img src="images/Brownies-4.png" alt="An image of lots of browines." />
+
+	<h2>What is the best way to cut brownies?</h2>
+
+	<p>If you are making vegan brownies for a party or to serve to others, it’s important to follow a couple of steps to get really nicely cut brownies. This is true whether they are vegan brownies or not!</p>
+
+	<p>It is helpful to line your pan with parchment paper that hangs out the sides for easy removal. After baking, let the brownies cool off for 15 minutes in the pan, then lift them out of the pan with the parchment paper and let cool 15-30 minutes more on a cooling rack. The longer you let them cool, the easier and cleaner cutting will be.</p>
+
+	<p>To cut, use a big, heavy knife. Run it under hot water for 30 seconds, dry it quickly and cut the brownies. Clean off the knife in between cuts, and you will have clean brownie squares.</p>
+
+
+	<h4>Notes</h4>
 	<ol>
 		<li>To sift, either use a sifter or a fine mesh strainer also works.</li>
 		<li>Coconut oil does not work very well in place of the vegan butter; it makes them very oily so I don’t recommend it. You could sub applesauce for the vegan butter if you are oil free.</li>
